<resources>
    <string name="app_name">Kfun</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sup">sup</string>
    <string name="image_labeling">Image Labeling</string>
    <string name="text_detection">Text Detection</string>
    <string name="face_detection">Face Detection</string>
    <string name="landmark_detection">Landmark Detection</string>
    <string name="barcode_detection">Barcode Detection</string>
    <string name="kfun_deeplink">Kfun Deeplink</string>
    <string name="input_hint">type something here</string>
    <string name="lang_detect">Detect language</string>
    <string name="smart_reply">Smart Reply</string>
    <string name="translate">Translate</string>
    <string name="camerax">Camera X</string>
    <string name="livecamera">Live Camera</string>
</resources>
