<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="imageLabeling"
        android:text="@string/image_labeling" />

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:onClick="textDetect"-->
    <!--        android:text="@string/text_detection" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="faceDetect"
        android:text="@string/face_detection" />

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:onClick="barcodeDetect"-->
    <!--        android:text="@string/barcode_detection" />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:onClick="landmarkDetect"-->
    <!--        android:text="@string/landmark_detection" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="langDetect"
        android:text="@string/lang_detect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="smartReply"
        android:text="@string/smart_reply" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="translate"
        android:text="@string/translate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cameraX"
        android:text="@string/camerax" />
</LinearLayout>